--- a/packages/default/scss/colorpicker/_theme.scss
+++ b/packages/default/scss/colorpicker/_theme.scss
@@ -1,39 +1,34 @@
 @include exports("colorpicker/theme") {
+
     .k-colorpicker {
-        border-radius: $border-radius;
 
         // Normal state
         .k-picker-wrap {
-            @include appearance( input );
-            @include border-radius( $border-radius );
+            @include appearance( button );
         }
         .k-select {
-            @include appearance( button );
             border-color: inherit;
         }
 
         // Hovered state
         .k-state-hover {
-            @include appearance( hovered-input );
-
-            .k-select {
-                @include appearance( hovered-button );
-                border-color: inherit;
-            }
+            @include appearance( hovered-button );
         }
 
         // Selected state
         .k-state-active {
-            @include appearance( focused-input );
-
-            .k-select {
-                @include appearance( active-button );
-                border-color: inherit;
-            }
+            @include appearance( pressed-button );
         }
+
+        // Focused state
+        .k-state-focused {
+            box-shadow: $button-focused-shadow;
+        }
+
     }
 
     .k-flatcolorpicker {
         background-color: $base-bg;
     }
+
 }
